--- a/report/gresak-marko.tex
+++ b/report/gresak-marko.tex
@@ -44,7 +44,7 @@
 %   // Some great code.
 % \end{tscode}
 
-\title{Naslov}
+\title{\huge{Končno poročilo} \\ \Large{\em{Mreže v socialnem omrežju Vine}}}
 \author{Marko Grešak (63130058)}
 \date{\today}
 
