add section uvod

--- a/report/gresak-marko.tex
+++ b/report/gresak-marko.tex
@@ -54,6 +54,7 @@
 
 \section{Uvod}
 
+V svoji projektni nalogi sem analiziral podatke socialnega omrežja \href{https://vine.co}{\underline{Vine}}. Pri tem je bilo eno bolj zanimivh področij problem, kako kar se da dobro prikazati sodelovanje uporabnikov. Poskušal sem tudi odkriti, kakšne skupnosti se tvorijo čez čas, vendar mi to zaradi pomanjkana podatkov ni uspelo. Pred začetkom idelave naloge sem po raziskavi ugotovil, da še nihče ni delal podobne raziskave oziroma je ni objavil javno.
 
 
 V tem razdelku, ki naj bo kratek in naj obsega en odstavek z do 150
