add subsection "Kaj je Vine?"

--- a/report/gresak-marko.tex
+++ b/report/gresak-marko.tex
@@ -56,9 +56,9 @@
 
 V svoji projektni nalogi sem analiziral podatke socialnega omrežja \href{https://vine.co}{\underline{Vine}}. Pri tem je bilo eno bolj zanimivh področij problem, kako kar se da dobro prikazati sodelovanje uporabnikov. Poskušal sem tudi odkriti, kakšne skupnosti se tvorijo čez čas, vendar mi to zaradi pomanjkana podatkov ni uspelo. Pred začetkom idelave naloge sem po raziskavi ugotovil, da še nihče ni delal podobne raziskave oziroma je ni objavil javno.
 
+\subsection{Kaj je Vine?}
 
-V tem razdelku, ki naj bo kratek in naj obsega en odstavek z do 150
-besed, na kratko opišeš, kaj je bil cilj naloge.
+Ko govorim o projektu se v večini primerov najprej pojavi vprašanje: \textit{“Kaj je Vine?”}. Vine je Twitterjeva spletna storitev, ki uporabnikom omogoča nalaganje do 7 sekundnih videov, s časom pa so ga uporabniki začeli uporabljati kot čisto neodvisno socialno omrežje. Omrežje je postalo popularno zaradi uporabnikov, ki ustvarjajo smešno vsebino.
 
 \section{Podatki}
 
