add subsection "Podatki in Tehnologije"

--- a/report/gresak-marko.tex
+++ b/report/gresak-marko.tex
@@ -60,6 +60,14 @@ V svoji projektni nalogi sem analiziral podatke socialnega omrežja \href{https:
 
 Ko govorim o projektu se v večini primerov najprej pojavi vprašanje: \textit{“Kaj je Vine?”}. Vine je Twitterjeva spletna storitev, ki uporabnikom omogoča nalaganje do 7 sekundnih videov, s časom pa so ga uporabniki začeli uporabljati kot čisto neodvisno socialno omrežje. Omrežje je postalo popularno zaradi uporabnikov, ki ustvarjajo smešno vsebino.
 
+\subsection{Podatki in Tehnologije}
+
+\begin{itemize}
+  \item Omejil sem se na uporabnike z vsaj 50.000 sledilci, teh sem našel 588,
+  \item Za razvojno okolje sem si izbral \href{https://nodejs.org/}{\underline{Node.js}} in \href{http://www.typescriptlang.org/}{\underline{TypeScript}},
+  \item Večino grafov sem narial iz Node.js s pomočjo storitve \href{https://plot.ly/}{\underline{Plotly}}, z izjemo grafa sodelovanja med uporabniki, ki je narisan s pomočjo \href{http://d3js.org/}{\underline{D3.js}}.
+\end{itemize}
+
 \section{Podatki}
 
 Če je naloga zasnovana tako, da vključuje analizo izbranih podatkov, v
