rename "Zbiranje podatkov" to "Izvor podatkov"

--- a/report/gresak-marko.tex
+++ b/report/gresak-marko.tex
@@ -81,7 +81,7 @@ Programska koda je javno dostopna na GitHubu, na naslovu\\
 \pagebreak
 \section{Podatki}
 
-\subsection{Zbiranje podatkov}
+\subsection{Izvor podatkov}
 
 Med iskanem podatkov nisem našel nobene povezave, z že vnaprej pripravljenimi podatki. To pomeni, da vse svoje podatke črpam zgolj iz \href{https://api.vineapp.com}{\underline{Vine API}}. Ker API nima nikakršne uradne dokumentacije, sem si moral pomagati redkimi, predvsem pa zastarelimi, viri na spletu ter svojim raziskovenjam, iz tega pa sem izpeljal dokumentacijo \href{https://github.com/markogresak/vine-data-mining/blob/master/API-reference.md}{\underline{Vine API Reference}}. Že ob času pisanja tega poročila so nekatere informacije zastarele, ampak se jih nisem spravil popravljati, saj sem bil prezaposljen s popravljanjem same kode.
 \\
