--- a/report/gresak-marko.tex
+++ b/report/gresak-marko.tex
@@ -84,7 +84,7 @@ Programska koda je javno dostopna na GitHubu, na naslovu\\
 \subsection{Izvor podatkov}
 
 Med iskanem podatkov nisem našel nobene povezave, z že vnaprej pripravljenimi podatki. To pomeni, da vse svoje podatke črpam zgolj iz \href{https://api.vineapp.com}{\underline{Vine API}}. Ker API nima nikakršne uradne dokumentacije, sem si moral pomagati redkimi, predvsem pa zastarelimi, viri na spletu ter svojim raziskovenjam, iz tega pa sem izpeljal dokumentacijo \href{https://github.com/markogresak/vine-data-mining/blob/master/API-reference.md}{\underline{Vine API Reference}}. Že ob času pisanja tega poročila so nekatere informacije zastarele, ampak se jih nisem spravil popravljati, saj sem bil prezaposljen s popravljanjem same kode.
-\\
+\par
 Na tej točki sta se že pojavila prva dva problema: pomanjkanje dokumentacije ter večkratno spreminjanje API-ja, zaradi česar je vsa najdena dokumentcija hitro zastarela. Samo v času izdelave tega projekta se je po mojem opažanju odgovor API-ja spremenil vsaj trikrat. Sicer spremembe niso bile drastične, ampak so bile dovolj, da sem moral svoj program popravljati, da je lahko nadaljeval, pojavili pa so se tudi nekonsistentni podatki za iste odgovore APIja, zato sem se po drugi spremembi odločil, da ne shranjujem direktnih odgovorov, ampak svoje, prilagojene vrednosti.
 
 \end{document}
