--- a/report/gresak-marko.tex
+++ b/report/gresak-marko.tex
@@ -86,5 +86,12 @@ Programska koda je javno dostopna na GitHubu, na naslovu\\
 Med iskanem podatkov nisem našel nobene povezave, z že vnaprej pripravljenimi podatki. To pomeni, da vse svoje podatke črpam zgolj iz \href{https://api.vineapp.com}{\underline{Vine API}}. Ker API nima nikakršne uradne dokumentacije, sem si moral pomagati redkimi, predvsem pa zastarelimi, viri na spletu ter svojim raziskovenjam, iz tega pa sem izpeljal dokumentacijo \href{https://github.com/markogresak/vine-data-mining/blob/master/API-reference.md}{\underline{Vine API Reference}}. Že ob času pisanja tega poročila so nekatere informacije zastarele, ampak se jih nisem spravil popravljati, saj sem bil prezaposljen s popravljanjem same kode.
 \par
 Na tej točki sta se že pojavila prva dva problema: pomanjkanje dokumentacije ter večkratno spreminjanje API-ja, zaradi česar je vsa najdena dokumentcija hitro zastarela. Samo v času izdelave tega projekta se je po mojem opažanju odgovor API-ja spremenil vsaj trikrat. Sicer spremembe niso bile drastične, ampak so bile dovolj, da sem moral svoj program popravljati, da je lahko nadaljeval, pojavili pa so se tudi nekonsistentni podatki za iste odgovore APIja, zato sem se po drugi spremembi odločil, da ne shranjujem direktnih odgovorov, ampak svoje, prilagojene vrednosti.
+\par
+Naslednji problem se je pojavil pri ID vrednostih, saj so vse večje od limita vrednosti za številko v JavaScriptu oziroma TypeScript, jezik v katerem sem napisal mojo nalogo. Razlaga za to je, da je največja cela številčna vrednost v JavaScriptu \(2^{53}\), kar pa je manj od ID vrednosti, katera je bila npr. \textit{934940633704046592}, zato se je zgodil preliv (ang. overflow), na koncu pa je bila vrednost iz primera enaka \textit{934940633704046600}. To seveda pomeni, da uporabnika po tej vrednosti ne morem najti, saj je shranjena vrednost različna od pravega idja entitete, API pa seveda za podan ID odgovori s statusom napake.
+\par
+Problem sem rešil tako, da sem začel pri 5 po mojem mnenju najbolj sledenih uporabnikih, pri katerih je verjetnost sodelovanja večja, saj imajo veliko število objav. Pri zaključevanju sem ugotovil, da sem spustil samo enega uporabnika, ki je imel več sledilcev, pa še ta je pred kratkim skril svoje objave, torej si z njegovimi podatki ne bi veliko pomagal.
+\par
+Za vsakega od teh uporabnikov sem pripravil zahtevo na profil ter hkrati na časovnico, kjer se nahajajo vsi posnetki. Na le-tej se pojavi omejitev, saj lahko v zahtevi dobimo največ 100 posnetkov, za več pa moramo zahtevati naslednje strani. Problem sm rešil preprosto, saj ob vsaki zahtevi kot odgovor dobim število vseh objav, potem pa preostale izračunam po formuli \(\left \lfloor{\frac{n}{100}}\right \rfloor\) , kjer je \textit{n} število vseh objav, navzdol pa zaokrožim, ker prvo skupino objav že imam.
+
 
 \end{document}
