add compiled pdf report, fix tilda

--- a/report/gresak-marko.tex
+++ b/report/gresak-marko.tex
@@ -120,7 +120,7 @@ Za boljši pregled nad grafom proporočam klik na povezavo za interaktiven ogled
   \begin{center}
     \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/views-over-time.png}
     \caption{10 najbolj popularnih uporabnikov in njihovi ogledi skozi čas\\
-    Interaktivni pregled: \href{https://plot.ly/\~markogresak/61}{\underline{https://plot.ly/\~markogresak/61}}}
+    Interaktivni pregled: \href{https://plot.ly/~markogresak/61}{\underline{https://plot.ly/{\sim}markogresak/61}}}
   \end{center}
 \end{figure}
 
@@ -167,7 +167,7 @@ Domačo nalogo in pripadajoče programe sem izdelal sam.
     \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/follower-posts.png}
     \caption{Razmerje med številom sledilcev ter številom objav\\
     Lahko nekaj osamelcev čisto pri vrhu na levi, to so računalniki, ki nalagajo ``spam'' ali ukradeno vsebino za všečke. \\
-    Interaktivni pregled: \href{https://plot.ly/\~markogresak/18}{\underline{https://plot.ly/\~markogresak/18}}}
+    Interaktivni pregled: \href{https://plot.ly/~markogresak/18}{\underline{https://plot.ly/{\sim}markogresak/18}}}
   \end{center}
 \end{figure}
 
@@ -176,25 +176,25 @@ Domačo nalogo in pripadajoče programe sem izdelal sam.
     \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/follower-cooperations.png}
     \caption{Razmerje med številom sledilcev ter sodelovanji z ostalimi\\
     Hitro lahko opazimo, da v povprečju s številom sledilcev narašča tudi število sodelovanj. \\
-    Interaktivni pregled: \href{https://plot.ly/\~markogresak/62}{\underline{https://plot.ly/\~markogresak/62}}}
+    Interaktivni pregled: \href{https://plot.ly/~markogresak/62}{\underline{https://plot.ly/{\sim}markogresak/62}}}
   \end{center}
 \end{figure}
 
 \begin{figure}[htbp]
   \begin{center}
-    \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/follower-cooperations.png}
+    \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/follower-avg-views.png}
     \caption{Razmerje med številom sledilcev ter povprečjem ogledov\\
     Zanimivi outlierji, po ročnem pregledu sem ugotovil, da so to slavne osebnosti, ki pa niso redno aktivne na Vine-u. \\
-    Interaktivni pregled: \href{https://plot.ly/\~markogresak/117}{\underline{https://plot.ly/\~markogresak/117}}}
+    Interaktivni pregled: \href{https://plot.ly/~markogresak/117}{\underline{https://plot.ly/{\sim}markogresak/117}}}
   \end{center}
 \end{figure}
 
 \begin{figure}[htbp]
   \begin{center}
-    \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/follower-cooperations.png}
+    \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/follower-total-views.png}
     \caption{Razmerje med številom sledilcev ter številom vseh ogledov\\
     Število vseh ogledov narašča skoraj linearno, izstopa pa avtorica, ki pogosto objavi vsebino, katero je potrebno pogledati večkrat za popolno razumevanje, predvsem zaradi hitrega dogajanja. \\
-    Interaktivni pregled: \href{https://plot.ly/\~markogresak/118}{\underline{https://plot.ly/\~markogresak/118}}}
+    Interaktivni pregled: \href{https://plot.ly/~markogresak/118}{\underline{https://plot.ly/{\sim}markogresak/118}}}
   \end{center}
 \end{figure}
 
